[package]
name = "rust_aes"
version = "0.1.0"
authors = ["Tom Greasley <965075+schlafsack@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-soft = "0.6.4"
aesni = "0.10.0"
base32 = "0.4.0"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8.3"
num-iter = "0.1.42"
fpe = "0.4.0"
rayon = "1.5"

[dependencies.cipher]
version = "0.2"

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false
[dev-dependencies.criterion]
version = "0.3.4"
